--- a/frontend/src/app/components/admin/dashboard/subject-dashboard/subject-dashboard.component.scss
+++ b/frontend/src/app/components/admin/dashboard/subject-dashboard/subject-dashboard.component.scss
@@ -71,7 +71,7 @@
 }
 
 #subject-dashboard .subject .subject-img .background-image {
-    background-image: url("https://inst-fs-dub-prod.inscloudgate.net/files/2e49e2c0-2038-42ef-9464-748866152bb1/FCT.jpg?download=1&token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzUxMiJ9.eyJpYXQiOjE2NTIxNjg1NDAsInVzZXJfaWQiOm51bGwsInJlc291cmNlIjoiL2ZpbGVzLzJlNDllMmMwLTIwMzgtNDJlZi05NDY0LTc0ODg2NjE1MmJiMS9GQ1QuanBnIiwianRpIjoiNDM2ODk1ZDktZWE0ZS00ZWIzLWEyZjctYTM2MzhkM2FhMTdlIiwiaG9zdCI6bnVsbCwiZXhwIjoxNjUyNzczMzQwfQ.6sP4PWj8F8EZ3gaJ9tx63LDaV6B8qhBg2UYj9I-A_0SifWzpolxY1aWJwYhHyRJgnCtNzfIteQ90fhwSt5DN0g&geometry=524x292&format=webp");
+    background-image: url(../../../../../assets/images/faculdade.png);
 }
 
 #subject-dashboard .subject .subject-img .background-add-subject {
@@ -80,9 +80,31 @@
     background-image: url("data:image/svg+xml,%3c%3fxml version='1.0' encoding='UTF-8' standalone='no'%3f%3e %3csvg xmlns:inkscape='http://www.inkscape.org/namespaces/inkscape' xmlns:rdf='http://www.w3.org/1999/02/22-rdf-syntax-ns%23' xmlns='http://www.w3.org/2000/svg' xmlns:dc='http://purl.org/dc/elements/1.1/' xmlns:ns1='http://sozi.baierouge.fr' xmlns:cc='http://web.resource.org/cc/' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:sodipodi='http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd' id='svg1' sodipodi:docname='edit_add.svg' viewBox='0 0 60 60' sodipodi:version='0.32' _SVGFile__filename='oldscale/actions/edit_add.svg' version='1.0' y='0' x='0' inkscape:version='0.40' sodipodi:docbase='/home/danny/work/flat/SVG/mono/scalable/actions'%3e%3csodipodi:namedview id='base' bordercolor='%23666666' inkscape:pageshadow='2' inkscape:window-y='0' pagecolor='white' inkscape:window-height='699' inkscape:zoom='2.2997497' inkscape:window-x='0' borderopacity='1.0' inkscape:current-layer='svg1' inkscape:cx='61.037632' inkscape:cy='35.701265' inkscape:window-width='1024' inkscape:pageopacity='0.0'/%3e%3cpath id='path1092' style='stroke-linejoin:round%3bstroke:white%3bstroke-linecap:round%3bstroke-width:5%3bfill:none' d='m23.78 23.78v-13.999c0-1.9588 0.536-3.55 1.607-4.7741 1.071-1.2546 2.601-1.8819 4.59-1.8819s3.519 0.6273 4.59 1.8819c1.102 1.2241 1.653 2.8153 1.653 4.7737v13.999h13.816c2.019 0 3.611 0.551 4.773 1.653 1.194 1.071 1.791 2.586 1.791 4.544 0 1.989-0.597 3.534-1.791 4.636-1.162 1.102-2.754 1.652-4.773 1.652h-13.816v13.954c0 1.989-0.551 3.596-1.653 4.82-1.101 1.224-2.632 1.836-4.59 1.836s-3.488-0.612-4.59-1.836c-1.071-1.224-1.607-2.831-1.607-4.82v-13.954h-13.816c-1.9582 0-3.5494-0.596-4.7735-1.79-1.1934-1.224-1.7901-2.723-1.7901-4.498 0-1.958 0.5814-3.473 1.7442-4.544 1.1935-1.102 2.8-1.653 4.8196-1.653h13.816z'/%3e%3cpath id='path837' style='fill:black' d='m23.78 23.78v-13.999c0-1.9588 0.536-3.55 1.607-4.7741 1.071-1.2546 2.601-1.8819 4.59-1.8819s3.519 0.6273 4.59 1.8819c1.102 1.2241 1.653 2.8153 1.653 4.7737v13.999h13.816c2.019 0 3.611 0.551 4.773 1.653 1.194 1.071 1.791 2.586 1.791 4.544 0 1.989-0.597 3.534-1.791 4.636-1.162 1.102-2.754 1.652-4.773 1.652h-13.816v13.954c0 1.989-0.551 3.596-1.653 4.82-1.101 1.224-2.632 1.836-4.59 1.836s-3.488-0.612-4.59-1.836c-1.071-1.224-1.607-2.831-1.607-4.82v-13.954h-13.816c-1.9582 0-3.5494-0.596-4.7735-1.79-1.1934-1.224-1.7901-2.723-1.7901-4.498 0-1.958 0.5814-3.473 1.7442-4.544 1.1935-1.102 2.8-1.653 4.8196-1.653h13.816z'/%3e%3cmetadata%3e%3crdf:RDF%3e%3ccc:Work%3e%3cdc:format%3eimage/svg%2bxml%3c/dc:format%3e%3cdc:type rdf:resource='http://purl.org/dc/dcmitype/StillImage'/%3e%3ccc:license rdf:resource='http://creativecommons.org/licenses/publicdomain/'/%3e%3cdc:publisher%3e%3ccc:Agent rdf:about='http://openclipart.org/'%3e%3cdc:title%3eOpenclipart%3c/dc:title%3e%3c/cc:Agent%3e%3c/dc:publisher%3e%3c/cc:Work%3e%3ccc:License rdf:about='http://creativecommons.org/licenses/publicdomain/'%3e%3ccc:permits rdf:resource='http://creativecommons.org/ns%23Reproduction'/%3e%3ccc:permits rdf:resource='http://creativecommons.org/ns%23Distribution'/%3e%3ccc:permits rdf:resource='http://creativecommons.org/ns%23DerivativeWorks'/%3e%3c/cc:License%3e%3c/rdf:RDF%3e%3c/metadata%3e%3c/svg%3e");
 }
 
+#subject-dashboard .subject .subject-delete{
+    width: 14px;
+    height: 14px;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-image: url("data:image/svg+xml,%3c%3fxml version='1.0' encoding='iso-8859-1'%3f%3e %3c!-- Generator: Adobe Illustrator 19.0.0%2c SVG Export Plug-In . SVG Version: 6.00 Build 0) --%3e %3csvg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 458.5 458.5' style='enable-background:new 0 0 458.5 458.5%3b' xml:space='preserve'%3e%3cg%3e%3cg%3e%3cg%3e%3cpath d='M382.078%2c57.069h-89.78C289.128%2c25.075%2c262.064%2c0%2c229.249%2c0S169.37%2c25.075%2c166.2%2c57.069H76.421 c-26.938%2c0-48.854%2c21.916-48.854%2c48.854c0%2c26.125%2c20.613%2c47.524%2c46.429%2c48.793V399.5c0%2c32.533%2c26.467%2c59%2c59%2c59h192.508 c32.533%2c0%2c59-26.467%2c59-59V154.717c25.816-1.269%2c46.429-22.668%2c46.429-48.793C430.933%2c78.985%2c409.017%2c57.069%2c382.078%2c57.069z M229.249%2c30c16.244%2c0%2c29.807%2c11.673%2c32.76%2c27.069h-65.52C199.442%2c41.673%2c213.005%2c30%2c229.249%2c30z M354.503%2c399.501 c0%2c15.991-13.009%2c29-29%2c29H132.995c-15.991%2c0-29-13.009-29-29V154.778c12.244%2c0%2c240.932%2c0%2c250.508%2c0V399.501z M382.078%2c124.778 c-3.127%2c0-302.998%2c0-305.657%2c0c-10.396%2c0-18.854-8.458-18.854-18.854S66.025%2c87.07%2c76.421%2c87.07h305.657 c10.396%2c0%2c18.854%2c8.458%2c18.854%2c18.854S392.475%2c124.778%2c382.078%2c124.778z'/%3e%3cpath d='M229.249%2c392.323c8.284%2c0%2c15-6.716%2c15-15V203.618c0-8.284-6.715-15-15-15c-8.284%2c0-15%2c6.716-15%2c15v173.705 C214.249%2c385.607%2c220.965%2c392.323%2c229.249%2c392.323z'/%3e%3cpath d='M306.671%2c392.323c8.284%2c0%2c15-6.716%2c15-15V203.618c0-8.284-6.716-15-15-15s-15%2c6.716-15%2c15v173.705 C291.671%2c385.607%2c298.387%2c392.323%2c306.671%2c392.323z'/%3e%3cpath d='M151.828%2c392.323c8.284%2c0%2c15-6.716%2c15-15V203.618c0-8.284-6.716-15-15-15c-8.284%2c0-15%2c6.716-15%2c15v173.705 C136.828%2c385.607%2c143.544%2c392.323%2c151.828%2c392.323z'/%3e%3c/g%3e%3c/g%3e%3c/g%3e%3cg%3e%3c/g%3e%3cg%3e%3c/g%3e%3cg%3e%3c/g%3e%3cg%3e%3c/g%3e%3cg%3e%3c/g%3e%3cg%3e%3c/g%3e%3cg%3e%3c/g%3e%3cg%3e%3c/g%3e%3cg%3e%3c/g%3e%3cg%3e%3c/g%3e%3cg%3e%3c/g%3e%3cg%3e%3c/g%3e%3cg%3e%3c/g%3e%3cg%3e%3c/g%3e%3cg%3e%3c/g%3e%3c/svg%3e");
+    filter: invert(55%) sepia(78%) saturate(5902%) hue-rotate(328deg) brightness(102%) contrast(102%);
+}
+
 #subject-dashboard .wrap-subject {
     display: flex;
     flex-wrap: wrap;
     height: 100%;
     max-width: 70%;
+}
+
+#subject-dashboard .wrap-subject .wrap-subject-info{
+    display: flex;
+    align-items: center;
+    flex: 1;
+    justify-content: space-between;
+    max-width: 150px;
+    margin: auto;
+}
+
+#subject-dashboard .wrap-subject .wrap-subject-info .svg-img:hover{
+    opacity: 0.5;
 }
