--- a/frontend/src/app/components/admin/layout/header/header.component.html
+++ b/frontend/src/app/components/admin/layout/header/header.component.html
@@ -7,7 +7,7 @@
                 <div class="account svg-icon icon-size" (click)="home()"></div>
                 <p class="info-label">Home</p>
             </div>
-            <div class="grades-info header-div-icon-size">
+            <div class="grades-info header-div-icon-size" (click)="getGrades()">
                 <div class="grades svg-icon icon-size"></div>
                 <p class="info-label">Grades</p>
             </div>
