--- a/frontend/src/app/components/admin/dashboard/add-presentation/add-presentation.component.html
+++ b/frontend/src/app/components/admin/dashboard/add-presentation/add-presentation.component.html
@@ -50,6 +50,6 @@
                 </div>
             </div>
         </div>
-        <div class="btn-add-presentation" (click)="addPresentation()" type="submit">Adicionar</div>
+        <div class="btn-add-presentation btn-normal" (click)="addPresentation()" type="submit">Adicionar</div>
     </form>
 </div>
