--- a/frontend/src/app/components/admin/dashboard/add-subject/add-subject.component.scss
+++ b/frontend/src/app/components/admin/dashboard/add-subject/add-subject.component.scss
@@ -3,6 +3,4 @@
     margin-bottom: 10px;
 }
 
-.wrap-subject .btn-add-subjet {
-    cursor: pointer;
-}
+.wrap-subject #subjectName{padding: 10px 40px;}
