--- a/frontend/src/app/components/admin/dashboard/grades/grades.component.html
+++ b/frontend/src/app/components/admin/dashboard/grades/grades.component.html
@@ -1,11 +1,30 @@
-<div class="grades">
-    <div *ngFor="let subject of this.subjectsService.subjects ">
-        <div (click)="getAllPresentations(subject.ID)">{{subject.name}}</div>
-    </div>
-
-    <div *ngIf="this.presentationService.presentations != undefined">
-        <div *ngFor="let presentation of this.presentationService.presentations">
-            <div (click)="getGrades(presentation.ID)">{{presentation.name}}</div>
+<div class="grades" id ="grades">
+    <div class="wrap-grades">
+        <div class="subject-info">
+            <div class="subject-title">
+                Selecione a disciplina: 
+            </div>
+            <div class="wrap-subjects">
+                <div class="subject" (click)="selectedSubject($event)" *ngFor="let subject of this.subjectsService.subjects ">
+                    <div class="subject-img" (click)="getAllPresentations(subject.ID)">
+                        <div class="svg-img background-image"></div>
+                    </div>
+                    <div class="wrap-subject-info" style="display: flex; align-items: center;justify-content: center;">
+                        <div class="svg-img subject-change-name"></div>
+                        <div class="subject-info">
+                            {{subject.name}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div *ngIf="this.presentationService.presentations != undefined">
+            <div class="presentation-title">
+                Selecione a Apresentação: 
+            </div>
+            <div *ngFor="let presentation of this.presentationService.presentations">
+                <div (click)="getGrades(presentation.ID)">{{presentation.name}}</div>
+            </div>
         </div>
     </div>
 </div>
