--- a/frontend/src/app/components/admin/dashboard/home/home.component.html
+++ b/frontend/src/app/components/admin/dashboard/home/home.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!presentationAvailable()" id="dashboard">
+<div *ngIf="!presentationAvailable() && role" id="dashboard">
     <div class="container">
         <div class="wrap-dashboard">
             <div class="title">Dashboard</div>
