--- a/frontend/src/app/components/admin/dashboard/home/home.component.html
+++ b/frontend/src/app/components/admin/dashboard/home/home.component.html
@@ -1,4 +1,3 @@
-{{this.chat.presentationData}}
 <div *ngIf="!presentationAvailable() && role" id="dashboard">
     <div class="container">
         <div class="wrap-dashboard">
@@ -14,7 +13,7 @@
                 <div class="wrap-subject-info" style="display: flex; align-items: center">
                     <div class="svg-img subject-change-name"></div>
                     <div class="subject-info">
-                        {{subject.name}}
+                        {{subject.name}} 
                     </div>
                     <div class="svg-img subject-delete"(click)="deleteSubject(subject)"></div>
                 </div>
@@ -39,9 +38,14 @@
     </div>
 </div>
 <div *ngIf="this.chat.presentationData != undefined" id="questions">
+    <div class="wrapper">
+        <div class="times">
+            <p id="seconds">{{this.chat.timer}}</p>
+        </div>
+    </div>
     <div style='transform: scale(0.65); position: relative;'>
-        <h3>{{this.chat.presentationData.question}}?</h3>
-        <p>Escolha a alínea verdadeira</p>
+        <h3 style="font-size:26px;">{{this.chat.presentationData.question}}?</h3>
+        <p style="font-size:18px;">Escolha a alínea verdadeira</p>
         <hr />
         <div class="subject" *ngFor="let questions of this.chat.presentationData.answers;let i = index" id='block-11' style='padding: 10px;'>
           <label for='option-{{i}}' style=' padding: 5px; font-size: 2.5rem;'>
@@ -51,13 +55,13 @@
         </div>
         <hr />
       
-        <button type='button' class='btn-normal' (click)="sendUserResponse(this.chat.presentationData.id)">Submit</button>
+        <button style="font-size: 20px;"  type='button' class='btn-normal' (click)="sendUserResponse(this.chat.presentationData.id)">Submeter</button>
       </div>
       <a id='showanswer1'></a>
 </div>
 
 <div *ngIf="this.chat.presentationData == undefined && !role">
-    <div>
+    <div class="wait-for-answers">
         Aguarde pelas questões...
     </div>
 </div>
