--- a/frontend/src/app/components/admin/dashboard/home/home.component.scss
+++ b/frontend/src/app/components/admin/dashboard/home/home.component.scss
@@ -102,3 +102,26 @@
     height: 100%;
     max-width: 70%;
 }
+
+
+.wrapper {
+    max-width: 300px;
+    margin: 0 auto;
+    font: normal 14px sans-serif;
+    .targe-date {
+      text-align: center;
+    }
+    .description,
+    .times {
+      display: flex;
+      > p {
+        width: 25%;
+  
+        margin: 10px 0 0 0;
+        text-align: center;
+      }
+    }
+    .times {
+      font-size: 22px;
+    }
+  }
